# Spectra

./: .codex_pr_body.md  .cursorrules  .dockerignore  .editorconfig  .gitignore  .gitmodules  .prettierignore  .redocly.yaml  AGENTS.md  CHANGELOG.md  Dockerfile.diego.dev  LICENSE  MVP_READY.md  README.md  RQ_IMPLEMENTATION_SUMMARY.md  SECURITY.md  SECURITY_FIX.md  SECURITY_FIXES_2026-02-24.md  docker-compose.dev.yml  docker-compose.diego.dev.yml  docker-compose.dualweave.dev.yml  docker-compose.limora.dev.yml  docker-compose.ourograph.dev.yml  docker-compose.pagevra.dev.yml  docker-compose.postgres-shadow.yml  docker-compose.single.yml  docker-compose.stratumind.dev.yml  docker-compose.yml  fix_status.py  package-lock.json  package.json  script.js  script.py  start_backend.sh  stdout  test-openapi.yaml  test_integration.sh  课件md生成后处理与key_points语义污染_BUG报告_2026-04-02.md
.ai/: CHANGELOG.md  CONTEXT.md  (+2 more)
doc-engine/: README.md  pyproject.toml
doc-engine/examples/competition-a/: ai_tasks.yaml  meta.yaml
doc-engine/examples/course-project/: meta.yaml
doc-engine/examples/school-lab-report/: meta.yaml
doc-engine/profiles/: competition-a.yaml  course-project.yaml  school-lab-report.yaml  thesis-lite.yaml
doc-engine/skill/personal-doc-engine/: SKILL.md
doc-engine/src/doc_engine/: __init__.py  ai.py  assemble.py  build.py  cli.py  models.py  profiles.py  word_pipeline.py
doc-engine/templates/base/: zh-formal.md
doc-engine/templates/body/: body-layers.md
doc-engine/templates/covers/: school-cover-schema.md
doc-engine/templates/frontmatter/: frontmatter-layers.md
(+2217 files in other folders)
